--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,15 +4,29 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!-- Sizes -->
-    <dimen name="size_small_24">24dp</dimen>
+    <dimen name="size_small_8">8dp</dimen>
+    <dimen name="size_normal_16">16dp</dimen>
+    <dimen name="size_normal_24">24dp</dimen>
+    <dimen name="size_normal_32">32dp</dimen>
+    <dimen name="size_medium_48">48dp</dimen>
     <dimen name="size_medium_56">56dp</dimen>
-    <dimen name="size_large_72">72dp</dimen>
+    <dimen name="size_medium_72">72dp</dimen>
+    <dimen name="size_large_80">80dp</dimen>
+    <dimen name="size_large_96">96dp</dimen>
+    <dimen name="size_large_104">104dp</dimen>
 
     <!-- Spaces -->
+    <dimen name="spacing_small_1">1dp</dimen>
+    <dimen name="spacing_small_2">2dp</dimen>
+    <dimen name="spacing_small_4">4dp</dimen>
     <dimen name="spacing_small_8">8dp</dimen>
     <dimen name="spacing_normal_16">16dp</dimen>
-    <dimen name="spacing_medial_24">24dp</dimen>
-    <dimen name="spacing_medium_32">32dp</dimen>
-    <dimen name="spacing_large_56">56dp</dimen>
-    <dimen name="spacing_larger_72">72dp</dimen>
+    <dimen name="spacing_normal_24">24dp</dimen>
+    <dimen name="spacing_normal_32">32dp</dimen>
+    <dimen name="spacing_medium_48">48dp</dimen>
+    <dimen name="spacing_medium_56">56dp</dimen>
+    <dimen name="spacing_medium_72">72dp</dimen>
+    <dimen name="spacing_large_80">80dp</dimen>
+    <dimen name="spacing_large_96">96dp</dimen>
+    <dimen name="spacing_large_104">104dp</dimen>
 </resources>
