--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="spacing_large_80">80dp</dimen>
     <dimen name="spacing_large_96">96dp</dimen>
     <dimen name="spacing_large_104">104dp</dimen>
+    <dimen name="line_thickness">1dp</dimen>
 </resources>
