--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,103 @@
         <item name="colorAccent">@color/color_accent</item>
     </style>
 
+    <!-- Иконки -->
+    <style name="icon">
+        <item name="android:layout_width">@dimen/size_normal_24</item>
+        <item name="android:layout_height">@dimen/size_normal_24</item>
+    </style>
+
+    <style name="icon.left">
+        <item name="android:layout_gravity">top|left</item>
+        <item name="android:layout_marginTop">@dimen/size_normal_24</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_normal_16</item>
+    </style>
+
+    <style name="icon.right">
+        <item name="android:layout_gravity">top|right</item>
+        <item name="android:layout_marginTop">@dimen/spacing_normal_24</item>
+        <item name="android:layout_marginRight">@dimen/spacing_normal_32</item>
+    </style>
+
+    <!-- Текстовое поле -->
+    <style name="text_field">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:focusable">false</item>
+        <item name="android:enabled">true</item>
+    </style>
+
+    <!-- Блок горизонтальной строки с данными  -->
+    <style name="outer_data_block">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <!-- Внутренний вертикальный блок с данными -->
+    <style name="inner_data_block">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/size_medium_72</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_normal_32</item>
+        <item name="android:layout_marginRight">@dimen/spacing_normal_16</item>
+    </style>
+
+    <!-- Горизонтальный разделитель -->
+    <style name="separator">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/line_thickness</item>
+        <item name="android:background">@color/grey_light</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_medium_72</item>
+    </style>
+
+    <style name="text_input">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!-- Vertical block for statistic -->
+    <style name="stat_block">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <!-- Block with statistic data -->
+    <style name="stat_data">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/spacing_normal_24</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <!-- Block with statistic name -->
+    <style name="stat_name">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <!-- Vertical separator -->
+    <style name="ver_separator">
+        <item name="android:layout_width">@dimen/spacing_small_1</item>
+        <item name="android:layout_height">@dimen/spacing_medium_72</item>
+        <item name="android:layout_marginTop">@dimen/spacing_normal_24</item>
+        <item name="android:background">@color/grey_light</item>
+    </style>
+
 </resources>
